--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               'slide-up': 'slideUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards',
               'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'float': 'float 3s ease-in-out infinite',
+              'blob': 'blob 10s infinite',
             },
             keyframes: {
               fadeIn: {
@@ -46,6 +47,12 @@
               float: {
                 '0%, 100%': { transform: 'translateY(0)' },
                 '50%': { transform: 'translateY(-5px)' },
+              },
+              blob: {
+                "0%": { transform: "translate(0px, 0px) scale(1)" },
+                "33%": { transform: "translate(30px, -50px) scale(1.1)" },
+                "66%": { transform: "translate(-20px, 20px) scale(0.9)" },
+                "100%": { transform: "translate(0px, 0px) scale(1)" }
               }
             }
           }
@@ -80,7 +87,7 @@
 }
 </script>
 </head>
-  <body class="bg-legal-50 text-legal-900 font-sans antialiased h-screen overflow-hidden selection:bg-legal-200">
+  <body class="bg-legal-50 text-legal-900 font-sans antialiased min-h-screen selection:bg-legal-200">
     <div id="root" class="h-full w-full"></div>
   </body>
 </html>
